--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "homepage": "https://gitname.github.io/portfolio",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^17.2.2",
+    "emailjs-com": "^3.2.0",
     "gasp": "^0.0.2",
     "gsap": "^3.13.0",
+    "motion": "^12.23.12",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
